--- a/style.sass
+++ b/style.sass
@@ -26,9 +26,10 @@ body
     .card
         background-color: $darkGrey
         width: 100%
-        max-width: 300px
+        max-width: 330px
         margin: 2rem
-        border-radius: .75rem
+        padding: .7rem
+        border-radius: .55rem
         .user-info
             display: flex
             align-items: center
@@ -49,7 +50,7 @@ body
                 font-size: 12px
                 font-weight: 700
         .subtitle
-            color: #ffffffc2
+            color: #ffffffee
             font-weight: 300
             font-size: 12px
             text-align: center
